# qql

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
resources/: Features.md  sample.qql  sample_v2.qql
src/qql/: __init__.py  ast_nodes.py  cli.py  config.py  dumper.py  embedder.py  exceptions.py  executor.py  lexer.py  parser.py  script.py
tests/: test_dumper.py  test_executor.py  test_lexer.py  test_parser.py  test_script.py
